# appledb-api-rs

./: .gitignore  .gitmodules  CNAME  Cargo.toml  OsEntry.md  README.md  deploy.js  fix_json.js  prepare_jailbreak_json.js
adb-web-rs/: Cargo.toml
bypass/: Citibank.UAE.json  Com.BanqueMisr.MobileBanking.json  ae.ahb.digital.prod.json  ae.healthshield.app.ios.json  au.com.7elevenfuel.json  au.com.cheq.json  au.com.foxtel.FoxtelGo.json  au.com.hsbc.hsbcaustralia.json  au.com.opal.travel.json  ba.raiffeisenbank.prod.json  be.aion.ios.app.prod.json  be.belfius.BelfiusDirectMobile.json  be.bmid.itsme.json  br.com.c6bank.app.json  br.com.coinbr.smartwallet.json  br.com.intermedium.json  br.com.serasaconsumidor.serasaapp.json  ca.mcdonalds.McDonalds.json  ca.tangerine.clients.banking.json  ch.post.pf.mp.iapp.json  co.bitdreams.Tangerine.json  co.momentlens.moment.json  com.3mosquitos.MercadoLibre.json  com.ADT.ADTDistribution.json  com.CBD.CBD.json  com.CIMB.OctoPH.json  com.DNB.playinstore.json  com.Funimation.FunimationNow.json  com.MeeTwo.ios.json  com.Paraken.Musemage.json  com.Payoneer.PayoneerDevAdHoc.json  com.aastocks.app1.json  com.abbott.librelink.us.json  com.abbott.librelink.us2.json  com.abcnews.ABCNews.json  com.activehours.Activehours.json  com.activision.callofduty.shooter.json  com.acura.acuralink.connect.json  com.adib.mobilebanking.json  com.aiarlabs.prequel.json  (+355 more)
common/: bypass.rs  jailbreak.rs  main.rs  os.rs
device/: 10W USB Power Adapter.json  110W Mac mini Power Adapter.json  12W USB Power Adapter-2.json  12W USB Power Adapter.json  (+1121 more)
src/: adb_web.rs  (+10 more)
(+26160 files in other folders)
