[package]
name = "appledb-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
struct-field-names-as-array = "0.3.0"
structstruck = "0.4.1"
url = "2.5.0"
walkdir = "2.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
